This should be explicitly enabled for zones (#143)

--- a/configs/x86_64/zone.config
+++ b/configs/x86_64/zone.config
@@ -2334,6 +2334,7 @@ CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_FTRACE_REGS_HAVING_PT_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_NO_PATCHABLE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
+CONFIG_FTRACE_SYSCALLS=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_FENTRY=y
 CONFIG_HAVE_OBJTOOL_MCOUNT=y
